# glean-mcp-ab-eval-kit

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/glean-mcp-eval/: SKILL.md
commands/: grade-report-package.md  preflight.md  run-arm.md
config/: eval.config.ambient.example.json  eval.config.example.json  eval.config.strict.example.json  mcp.cursor.example.json  mcp.direct.example.json  mcp.glean.example.json
docs/: CONNECTOR_HEALTH_CHECKLIST.md  FIELD_RUNBOOK.md  METHODOLOGY.md  OPEN_SOURCE_NOTES.md  READOUT_TEMPLATE.md  REVERSE_ENGINEERED_DESIGN.md  SA_TESTER_QUICKSTART.md  glean_mcp_ab_eval_flow.html
docs/hosts/: claude-code.md  cursor.md
prompts/: golden_prompts.example.tsv
scripts/: glean_mcp_eval.py
scripts/hosts/: __init__.py  base.py  cursor.py
tests/: test_glean_mcp_eval.py
